--- a/front-side/src/app/views/login-register.html
+++ b/front-side/src/app/views/login-register.html
@@ -68,7 +68,7 @@
 				<div class="dropdown" id="dropdown-gender">
 					<span class="lblText">Sexo:</span>
 					<label>
-						<input id="gender" type="text" class="drop-toggle" (click)="dropToggle($event)" #genero="ngModel" name="genero" [(ngModel)]="user.genero" placeholder="Género" readonly>
+						<input id="gender" type="text" class="drop-toggle" (click)="dropToggle($event)" #genero="ngModel" name="genero" [(ngModel)]="user.gender" placeholder="Género" readonly>
 						<span class="fa fa-chevron-down"></span>
 						<ul class="drop-list">
 							<li class="drop-item" data-value="M">Masculino</li>
