--- a/front-side/src/app/admin/admin-style.scss
+++ b/front-side/src/app/admin/admin-style.scss
@@ -193,6 +193,10 @@ table {
 		color: $green-color;
 		padding-right: 10px;
 		cursor: pointer;
+		a {
+			text-decoration: none;
+			color: $green-color;
+		}
 		i { margin-right: 5px; pointer-events: none; }
 	}
 }
