--- a/front-side/src/app/admin/admin.html
+++ b/front-side/src/app/admin/admin.html
@@ -27,7 +27,7 @@
 	<ul class="menu-admin">
 		<li><a [routerLink]="['list-data']" [routerLinkActive]="['active']">Listar datos<i class="fa fa-chevron-right"></i></a></li>
 		<li><a [routerLink]="['add-data']" [routerLinkActive]="['active']">Agregar datos<i class="fa fa-chevron-right"></i></a></li>
-		<li><a [routerLink]="['select-animal']" [routerLinkActive]="['active']">Editar datos<i class="fa fa-chevron-right"></i></a></li>
+		<li><a [routerLink]="['edit-data']" [routerLinkActive]="['active']">Editar datos<i class="fa fa-chevron-right"></i></a></li>
 	</ul>
 
 	<div class="content-admin">
