--- a/front-side/src/app/admin/views/add-edit-data.html
+++ b/front-side/src/app/admin/views/add-edit-data.html
@@ -18,14 +18,14 @@
 	<label>
 		<textarea id="description" name="description" #description="ngModel" [(ngModel)]="animal.description" placeholder="Descripción"></textarea>
 	</label>
-	<div *ngIf="animal.name" class="image-add">
+	<div *ngIf="animal" class="image-add">
 		<div class="animal-image">
 			<span *ngIf="!animal.image">Sin imagen</span>
 		</div>
 		<div>
 			<p class="info">
 				<span class="fa fa-info-circle"></span>
-				<span>Para una mejor visualizaci&oacute;n de tu avatar sin distorsi&oacute;n, te recomendamos usar imagenes de 120 x 120px o medidas proporcionales. Adem&aacute;s solo se aceptan archivos de tipo &quot;jpg&quot;, &quot;jpeg&quot;, &quot;png&quot; y &quot;gif&quot;.</span>
+				<span>Para una mejor visualizaci&oacute;n de la imagen sin distorsi&oacute;n, te recomendamos usar imagenes de 200 x 200px o medidas proporcionales. Adem&aacute;s solo se aceptan archivos de tipo &quot;jpg&quot;, &quot;jpeg&quot;, &quot;png&quot; y &quot;gif&quot;.</span>
 			</p>
 			<button class="btn-default" type="button">Cargar imagen</button>
 			<span *ngIf="fileName" class="file-name">{{fileName}}<i class="fa fa-times"></i></span>
